# findyt

./: .env.example  README.md  pyproject.toml
core/: settings.py  urls.py
findyt/: apps.py  models.py  tasks.py  urls.py  views.py
findyt/migrations/: 0001_findyt.py
templates/: base.html
templates/findyt/: channels.html  index.html  results.html  search-results.html
