[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Roki Miftah Kamaludin <rokimiftah@gmail.com>"]
description = "Find YT Channel"
license = "MIT"
name = "findyt"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
django = "^4.2.5"
django-cors-headers = "^4.2.0"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
python = "^3.11"
python-dotenv = "^1.0.0"
setproctitle = "^1.3.2"
requests = "^2.31.0"
celery = "^5.3.4"

[tool.poetry.group.dev.dependencies]
django-browser-reload = "^1.11.0"
djlint = "^1.33.0"
toml-sort = "^0.23.1"
